GIULIO-COMMERCE-6907 commerce-shop-by-diagram-web autogenerated code (gw buildLang)

--- a/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language_es.properties
+++ b/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language_es.properties
@@ -7,6 +7,8 @@ diagram-file=Archivo de diagrama
 diagram-mapping=Asignación de diagrama
 diagram-pin=Marcador de diagrama
 diagram-settings=Ajustes de diagrama
+linked-to-diagram=Linked to Diagram (Automatic Copy)
+linked-to-sku=Linked to SKU (Automatic Copy)
 no-diagram-is-loaded=No diagram is loaded. (Automatic Copy)
 reset-zoom=Restablecer zoom
 select-color=Seleccionar color
