--- a/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language_ca.properties
+++ b/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language_ca.properties
@@ -7,6 +7,8 @@ diagram-file=Fitxer del diagrama
 diagram-mapping=Mapatge del diagrama
 diagram-pin=Marcador del diagrama
 diagram-settings=Configuració del diagrama
+linked-to-diagram=Linked to Diagram (Automatic Copy)
+linked-to-sku=Linked to SKU (Automatic Copy)
 no-diagram-is-loaded=No diagram is loaded. (Automatic Copy)
 reset-zoom=Restableix el zoom
 select-color=Seleccioneu el color
