--- a/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language_de.properties
+++ b/modules/dxp/apps/commerce/commerce-shop-by-diagram/commerce-shop-by-diagram-web/src/main/resources/content/Language_de.properties
@@ -7,6 +7,8 @@ diagram-file=Diagramm-Datei
 diagram-mapping=Diagrammzuordnung
 diagram-pin=Diagramm-Pin
 diagram-settings=Diagrammeinstellungen
+linked-to-diagram=Linked to Diagram (Automatic Copy)
+linked-to-sku=Linked to SKU (Automatic Copy)
 no-diagram-is-loaded=No diagram is loaded. (Automatic Copy)
 reset-zoom=Zoom zurücksetzen
 select-color=Farbe auswählen
