--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -8737,6 +8737,7 @@ maintenance-alert=Ylläpitohälyytys
 major=Vakava
 major-version=Pääversio
 make-a-copy=Tee Kopio
+make-active=Make Active (Automatic Copy)
 make-additional-changes-and-publish-them-when-you-are-ready=Tee lisämuutoksia ja julkaise ne, kun olet valmis.
 make-default=Tee Oletukseksi
 make-field-localizable=Tee Kentästä Lokalisoitava
@@ -10658,6 +10659,8 @@ order-by-type=Järjestä tyypin mukaan
 order-check-interval=Tilauksen Tarkistusväli
 order-checkout-configuration-name=Tilauksen Kassa-asetukset
 order-completed=Tilaus Valmistunut
+order-conditions=Order Conditions (Automatic Copy)
+order-conditions-eligibility=Order Conditions Eligibility (Automatic Copy)
 order-confirmation=Tilausvahvistus
 order-creator-definition-term=Käyttäjä, joka loi tilauksen
 order-date=Tilauspäivämäärä
